force-app/main/default/objects/CJOilPrice__c/CJOilPrice__c.object-meta.xml
<CustomObject>
    <label>대두유 시황</label>
    <nameField>
        <label>PriceListName</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>