force-app/main/default/objects/CJOilPrice__c/fields/fm_Is_stDay__c.field-meta.xml
<CustomField>
    <fullName>fm_Is_stDay__c</fullName>
    <formula>Today() = Date(Year(Today()),Month(Today()),1)</formula>
    <label>fm_Is!stDay</label>
    <type>Checkbox</type>
</CustomField>