force-app/main/default/objects/CJOilPrice__c/fields/WholesalePrice__c.field-meta.xml
<CustomField>
    <fullName>WholesalePrice__c</fullName>
    <label>WholesalePrice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>