force-app/main/default/objects/CJOilPrice__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <defaultValue>Text(Year(Today()))</defaultValue>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>