force-app/main/default/objects/CJOilPrice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>fm_PriceEffectiveDate__c</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <columns>RetailPrice__c</columns>
    <columns>WholesalePrice__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>모두</label>
</ListView>